# cppgraphqlgen

samples/: CMakeLists.txt
samples/test_server/: CMakeLists.txt  README.txt  TestServerWrapper.cpp  TestServerWrapper.h  test_server_mutation.cpp  test_server_query.cpp  test_server_subscription.cpp  test_server_web_async_old_subscription.cpp  test_server_web_old_subscription.cpp  test_server_web_subscription.cpp
samples/test_server/schema/: CMakeLists.txt  MutationObject.cpp  MutationObject.h  QueryObject.cpp  QueryObject.h  SubscriptionObject.cpp  SubscriptionObject.h  TelemetryObject.cpp  TelemetryObject.h  TestServerSchema.cpp  TestServerSchema.h  schema.test_server.graphql  test_server_schema_files
